fixed overflowing container

--- a/testyles.css
+++ b/testyles.css
@@ -56,7 +56,7 @@ ul{
 
 /* Background Image Settings */
 header {
-    width: 100vw;
+    width: 100%;
     height: 110vh;
     background: url(/images/benjamin-child-7Cdw956mZ4w-unsplash.jpg);
     background-position: bottom;
@@ -127,13 +127,11 @@ header {
 
 /* 1st Section Settings */
 section {
-    width: 80px;
     margin: 80px;
 }
 
 .title {
     text-align: center;
-    margin-left: 100%;
     font-size: 4vmin;
     color: #49497e;
 }
@@ -197,7 +195,6 @@ p {
 
 /* 2nd Section of the Web */
 .Explore {
-    width: 100%;
     height: 100vh;
     background: url(/images/benjamin-voros-jv15x2Gs5F8-unsplash.jpg);
     background-position:center;
@@ -209,7 +206,7 @@ p {
 
 .E1 {
     width: 50%;
-    padding: 50px;
+    /* padding: 50px; */
     color: #fff;
     display: flex;
     align-items: center;
@@ -238,15 +235,20 @@ p {
 
 /* Tours Section Settings */
 .tours {
-    width: 100%;
+    /* width: 100%; */
     height: 100vh;
+    padding: 5px;
 } 
 .row {
     background-color: aliceblue;
+
 }
 
 .tours .row .col {
     width: 50%;
+    margin: 10px;
+
+
 } 
 .tours .Image-gallery{
     display: flex;
